# social_network_fastapi

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 046f250042cc_init_migration.py
src/: main.py
src/api/api_v1/: api.py
src/api/api_v1/endpoints/: auth.py  post.py
src/config/: __init__.py  config.py  security.py
src/core/clients/: user_client.py
src/core/crud/: __init__.py  base.py  crud_post.py  crud_reaction.py  crud_user.py
src/core/db/: base.py  session.py
src/core/models/: __init__.py  post.py  reaction.py  user.py
src/core/repository/: __init__.py  auth_repo.py  post_repo.py  repository.py
src/core/schemas/: __init__.py  auth.py  post.py  reaction.py  user.py
